Fix Featured Books section visibility by removing duplicate CSS rule

--- a/css/library.css
+++ b/css/library.css
@@ -626,12 +626,6 @@ FEATURES
 
 */
 
-#features {
-  height: 100px;
-  padding-top: 8vw;
-  background-color: rgba(115, 66, 214, 0.1);
-}
-
 .books {
   display: flex;
   flex-wrap: wrap;
